# sada-app

./: .env.example  .gitignore  INVESTOR-AR.html  INVESTOR-AR.md  LAUNCH-PLAN.md  README.md  architecture.html  index.html  package-lock.json  package.json  payroll_visualization.html  supabase-migration-admin.sql  supabase-migration.sql  vite.config.js  wrangler.toml
DEEP /: context_engine_sources_master.csv
basira/: .env.example  .gitignore  OPTION_B_SETUP.md  README.md  pyproject.toml
basira/alembic/: env.py
basira/alembic/versions/: 204377234d9c_initial_schema.py
basira/app/: config.py  db.py  main.py  scheduler.py  supabase_store.py  worker.py
basira/app/analyze/: claude.py  embeddings.py  minimal_prompt.py  pipeline.py  prompts.py
basira/app/api/: admin.py  documents.py  sources.py  topics.py
basira/app/ingest/: dedupe.py  loader.py  pipeline.py  rss.py  universal_fallback.py
basira/app/models/: __init__.py  analysis.py  digest.py  document.py  ingest_run.py  source.py  topic.py
basira/app/schemas/: __init__.py  common.py  document.py  source.py
basira/app/web/: dashboard.py  routes.py
basira/app/web/templates/: base.html  dashboard.html  dashboard_action_result.html  dashboard_login.html  dashboard_overview.html  dashboard_pending_docs.html  dashboard_recent_runs.html  dashboard_sources_grid.html  home.html  sources.html
basira/data/: context_engine_sources_master.csv  sources_overrides.yaml
basira/deploy/: basira-ingest.yml
basira/scripts/: dedupe_repolled.py  migrate_sqlite_to_supabase.py  migrate_v2.py  repoll_analytical.py
(+89 files in other folders)
